[gd_scene load_steps=4 format=3 uid="uid://65fkbwcvmui6"]

[ext_resource type="Script" uid="uid://bru7livpcex11" path="res://typingUI.gd" id="1_wrqru"]
[ext_resource type="Theme" uid="uid://bad3rx1oyrprx" path="res://new_theme.tres" id="2_p8vqy"]
[ext_resource type="Texture2D" uid="uid://cahx72k5e5whe" path="res://idk/ChatGPT Image May 30, 2025, 07_22_08 PM.png" id="3_xlyeb"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_wrqru")

[node name="AmmoLabel" type="RichTextLabel" parent="."]
offset_top = 87.0
offset_right = 662.0
offset_bottom = 423.0

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_direction = 2
anchors_preset = -1
anchor_top = 0.742
anchor_right = 0.257
anchor_bottom = 0.869
offset_left = -44.0
offset_top = -194.816
offset_right = 683.941
offset_bottom = 822.056
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme = ExtResource("2_p8vqy")
max_value = 5.0
value = 5.0
texture_progress = ExtResource("3_xlyeb")
tint_under = Color(0.6756, 0.625226, 0.404239, 1)

[node name="AmmoCountLabel" type="RichTextLabel" parent="."]
offset_left = 380.0
offset_top = 482.0
offset_right = 489.0
offset_bottom = 567.0
